crates/carta/tests/snapshots/golden_e2e__rst__html__substitution-reference.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Power comes from the <a href="https://example.com/star">Sol</a>
above.</p>
