crates/carta/tests/snapshots/golden_e2e__rst__html__substitutions-undefined.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>This paragraph references an <a
href="##SUBST##|undefined|">|undefined|</a> substitution that is never
declared.</p>
