crates/carta/tests/snapshots/golden_e2e__rst__html__substitutions.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>The <span>Example Project</span> toolkit is documented online.</p>
