crates/carta/tests/snapshots/golden_e2e__rst__html__tables-simple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<thead>
<tr>
<th>Name</th>
<th>Score</th>
</tr>
</thead>
<tbody>
<tr>
<td>Alice</td>
<td>90</td>
</tr>
<tr>
<td>Bob</td>
<td>75</td>
</tr>
</tbody>
</table>
