crates/carta/tests/snapshots/golden_e2e__rst__html__target-escaped-colon.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>The reference <a href="http://example.com/colon">name: with colon</a>
points at an escaped-colon target.</p>
