crates/carta/tests/snapshots/golden_e2e__rst__html__transitions.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>A paragraph above the transition.</p>
<hr />
<p>A paragraph below the transition.</p>
